--- a/ejercicios_practica/templates/registro.html
+++ b/ejercicios_practica/templates/registro.html
@@ -32,5 +32,9 @@
   <input type="submit" value="Personas"/>
 </form>
 
+<form action="{{url_for('comparativa')}}">
+  <input type="submit" value="Grafico"/>
+</form>
+
 </body>
 </html>
