--- a/ejercicios_practica/templates/tabla.html
+++ b/ejercicios_practica/templates/tabla.html
@@ -34,9 +34,16 @@
 <form action="{{url_for('registro')}}">
     <input type="submit" value="Registro"/>
 </form>
+
+<form action="{{url_for('comparativa')}}">
+    <input type="submit" value="Grafico"/>
+</form>
+
 <form action="{{url_for('index')}}">
     <input type="submit" value="Home"/>
 </form>
+
+
 
 </body>
 </html>
