--- a/ejercicios_practica/templates/index.html
+++ b/ejercicios_practica/templates/index.html
@@ -21,5 +21,9 @@
         <input type="submit" value="Registro"/>
     </form>
 
+    <form action="{{url_for('comparativa')}}">
+        <input type="submit" value="Grafico"/>
+    </form>
+
 </body>
 </html>
